<resources>
    <string name="app_name">易书惠院</string>
    <string name="right">确定</string>

    <string name="search">搜索</string>
    <string name="search1">搜索:</string>
    <string name="search_edittext">搜索想要交换的书</string>
    <string name="search_textview">搜索记录</string>
    <string name="search_button">取消</string>

    <string name="view_1">我的需求</string>
    <string name="view_2">我的申请</string>
    <string name="view_3">交换记录</string>
    <string name="view_4">吐槽反馈</string>
    <string name="view_5">系统设置</string>
    <string name="view_6">点击登录</string>
    <string name="view_7">个人中心</string>
    <string name="view_01">昵称</string>
    <string name="view_account_management">账号管理</string>
    <string name="view_02">性别</string>
    <string name="view_03">学号</string>
    <string name="user_number_show">修改学号</string>
    <string name="view_04">手机号</string>
    <string name="user_telephone_show">修改手机号</string>
    <string name="view_05">账号</string>
    <string name="view_06">密码</string>
    <string name="button_01">退出账号</string>


    <string name="myneedsitem_view01">书名：</string>
    <string name="myneedsitem_view02">时间：</string>
    <string name="myneedsitem_view03">地点：</string>
    <string name="myneedsitem_view04">备注：</string>

    <string name="button1">交换</string>


    <string name="title_activity_login">登录</string>
    <!-- Strings related to login -->
    <string name="prompt_email">账号/手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="error_invalid_email">账号不存在！</string>
    <string name="error_invalid_password">密码太短！</string>
    <string name="error_incorrect_password">密码错误！</string>
    <string name="login_textview1">忘记密码？</string>
    <string name="login_textview2">新用户注册</string>
    <string name="error_field_required">该区域不能为空！</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!--nav 主体-->
    <string name="nav_1">我的收藏</string>
    <string name="nav_2">易书记录</string>
    <string name="nav_3">使用详情</string>
    <string name="nav_4">联系客服</string>
    <string name="nav_5">系统设置</string>


    <!--nav头部-->
    <string name="header_username">姓名</string>
    <string name="header_userid">学号++++++++++</string>
    <string name="header_faithfulness">诚信度：</string>
    <string name="header_score">五颗星</string>

    <!--注册-->
    <string name="register_username">输入手机号</string>
    <string name="register_password">输6–20位入密码</string>
    <string name="input_number">输入学号</string>
    <string name="input_nickname">输入昵称</string>
    <string name="register">注册</string>
    <string name="submit">提交</string>

    <!--发布换书需求信息-->
    <string name="book_name">书名</string>
    <string name="exchange_time">交换时间</string>
    <string name="exchange_place">交换地点</string>
    <string name="note">备注</string>

    <!--用户信息-->
    <string name="number">学号</string>
    <string name="telephone">手机号</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="password">密码</string>
    <string name="honesty">诚信度</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="sex_secrecy">保密</string>


</resources>
