<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single"/>

    <item
        android:id="@+id/nav_1"
        android:icon="@android:drawable/star_big_on"
        android:title="@string/nav_1"
        />
    <item
        android:id="@+id/nav_2"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_2"
        />
    <item
        android:id="@+id/nav_3"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/nav_3"
        />
    <item
        android:id="@+id/nav_4"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/nav_4"
        />

    <item
        android:id="@+id/nav_5"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/nav_5"
        />



</menu>