<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:padding="10dp"
    android:background="?attr/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--将图片圆形化,头部-->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/header_icon_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/head" />

    <TextView
        android:id="@+id/header_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"
        android:text="@string/header_username"
        android:textSize="15sp"
        android:padding="2dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/header_userid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_username"
        android:layout_alignStart="@+id/header_username"
        android:text="@string/header_userid"
        android:textSize="15sp"
        android:padding="2dp"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/header_next"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/arrow_right" />

    <TextView
        android:id="@+id/header_faithfulness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/header_icon_image"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13dp"
        android:text="@string/header_faithfulness"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/header_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/header_faithfulness"
        android:layout_toEndOf="@+id/header_faithfulness"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/header_score" />


</RelativeLayout>
